--- a/Primeira+Atividade+Prática+Avaliativa.ipynb
+++ b/Primeira+Atividade+Prática+Avaliativa.ipynb
@@ -17369,7 +17369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
@@ -17385,19 +17385,23 @@
     "    betas = []\n",
     "    n_tickers = tickers[['Adj Close']].reset_index().pivot('Date', 'Ticker', 'Adj Close')\n",
     "    n_tickers.drop(n_tickers.tail(4).index,inplace=True)\n",
-    "    \n",
     "    n_bvsp = bvsp[['Adj Close']].reset_index().pivot('Date', 'Ticker', 'Adj Close')['^BVSP']\n",
-    "#     print(n_tickers)\n",
-    "#     print(keys)\n",
     "    \n",
     "    for key in n_tickers:\n",
-    "        covmat = np.cov(n_tickers[key].values, n_bvsp.values)\n",
-    "        beta = covmat[0,1]/covmat[1,1]\n",
-    "        print(key, beta)\n",
-    "        beta.append({''})\n",
-    "\n",
+    "        dfsm = pd.DataFrame({'s_adjclose' : n_tickers[key],\n",
+    "                        'b_adjclose' : n_bvsp})\n",
+    "        dfsm[['s_returns','b_returns']] = dfsm[['s_adjclose','b_adjclose']]/\\\n",
+    "        dfsm[['s_adjclose','b_adjclose']].shift(1) -1\n",
+    "        dfsm = dfsm.dropna()\n",
+    "        covmat = np.cov(dfsm[\"s_returns\"],dfsm[\"b_returns\"])\n",
+    "#         covmat = np.cov(n_tickers[key].values, n_bvsp.values)\n",
+    "#         beta = covmat[0,1]/covmat[1,1]\n",
+    "#         print(key, beta)\n",
+    "#         betas.append({key: beta})\n",
+    "#     return betas;\n",
+    "        \n",
     "bvsp = get_tickers(['^BVSP'])\n",
-    "compare_beta(top_15_dataframe, bvsp)"
+    "result = compare_beta(top_15_dataframe, bvsp)"
    ]
   },
   {
@@ -17426,47 +17430,6 @@
    "metadata": {},
    "source": [
     "bvsp = all_data.iloc[all_data.index.get_level_values('Ticker') == '^BVSP']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 177,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ABEV3.SA -5.338147886716025e-05\n",
-      "BRML3.SA 0.00011495861288203346\n",
-      "CMIG4.SA 0.00031116756236346455\n",
-      "ELET3.SA 0.000848942901883898\n",
-      "ENBR3.SA 0.0002505391692432492\n",
-      "GOAU4.SA 2.446439259535954e-05\n",
-      "KROT3.SA -0.00011617192418057585\n",
-      "MGLU3.SA 0.000681972955916434\n",
-      "MRVE3.SA 0.00021805637428324185\n",
-      "TCSA3.SA -1.3430185526927973e-05\n",
-      "USIM5.SA 4.125918242191803e-06\n",
-      "VALE3.SA 0.00025197264132431374\n"
-     ]
-    }
-   ],
-   "source": [
-    "def compare_beta(tickers, bvsp):\n",
-    "    n_tickers = tickers[['Adj Close']].reset_index().pivot('Date', 'Ticker', 'Adj Close')\n",
-    "    n_tickers.drop(n_tickers.tail(4).index,inplace=True)\n",
-    "    \n",
-    "    n_bvsp = bvsp[['Adj Close']].reset_index().pivot('Date', 'Ticker', 'Adj Close')['^BVSP']\n",
-    "#     print(n_tickers)\n",
-    "#     print(keys)\n",
-    "    \n",
-    "    for key in n_tickers:\n",
-    "        covmat = np.cov(n_tickers[key].values, n_bvsp.values)\n",
-    "        beta = covmat[0,1]/covmat[1,1]\n",
-    "        print(key, beta)\n",
-    "\n",
-    "compare_beta(top_15_dataframe, bvsp)"
    ]
   },
   {
