--- a/Primeira+Atividade+Prática+Avaliativa.ipynb
+++ b/Primeira+Atividade+Prática+Avaliativa.ipynb
@@ -17369,22 +17369,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[*********************100%***********************]  1 of 1 downloaded\n"
+      "[*********************100%***********************]  1 of 1 downloaded\n",
+      "ABEV3.SA 0.5314189412456756\n",
+      "BRML3.SA 0.9393704110277423\n",
+      "CMIG4.SA 1.197823042117337\n",
+      "ELET3.SA 1.665431459456048\n",
+      "ENBR3.SA 0.6481319510366869\n",
+      "GOAU4.SA 1.2149202974635285\n",
+      "KROT3.SA 1.1430503917392765\n",
+      "MGLU3.SA 1.1962912603638645\n",
+      "MRVE3.SA 0.9846031974899353\n",
+      "TCSA3.SA 0.819263001993436\n",
+      "USIM5.SA 1.4928053371807821\n",
+      "VALE3.SA 0.8382027667442368\n"
      ]
     }
    ],
    "source": [
+    "# fonte: http://gouthamanbalaraman.com/blog/calculating-stock-beta.html\n",
     "def compare_beta(tickers, bvsp):\n",
     "    betas = []\n",
     "    n_tickers = tickers[['Adj Close']].reset_index().pivot('Date', 'Ticker', 'Adj Close')\n",
-    "    n_tickers.drop(n_tickers.tail(4).index,inplace=True)\n",
     "    n_bvsp = bvsp[['Adj Close']].reset_index().pivot('Date', 'Ticker', 'Adj Close')['^BVSP']\n",
     "    \n",
     "    for key in n_tickers:\n",
@@ -17394,11 +17406,10 @@
     "        dfsm[['s_adjclose','b_adjclose']].shift(1) -1\n",
     "        dfsm = dfsm.dropna()\n",
     "        covmat = np.cov(dfsm[\"s_returns\"],dfsm[\"b_returns\"])\n",
-    "#         covmat = np.cov(n_tickers[key].values, n_bvsp.values)\n",
-    "#         beta = covmat[0,1]/covmat[1,1]\n",
-    "#         print(key, beta)\n",
-    "#         betas.append({key: beta})\n",
-    "#     return betas;\n",
+    "        beta = covmat[0,1]/covmat[1,1]\n",
+    "        print(key, beta)\n",
+    "        betas.append({key: beta})\n",
+    "    return betas;\n",
     "        \n",
     "bvsp = get_tickers(['^BVSP'])\n",
     "result = compare_beta(top_15_dataframe, bvsp)"
